--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ orjson==3.10.18
 packaging==24.2
 pydantic==2.11.7
 pydantic_core==2.33.2
+python-dotenv==1.1.1
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
